--- a/CVND_Localization_Exercises/3_SLAM/1_1. Construct Omega and Xi, exercise.ipynb
+++ b/CVND_Localization_Exercises/3_SLAM/1_1. Construct Omega and Xi, exercise.ipynb
@@ -55,10 +55,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -70,6 +68,29 @@
     "    ## and add each position/motion constraint to them\n",
     "    \n",
     "    # Your code here\n",
+    "    omega = np.zeros((3,3))\n",
+    "    xi = np.zeros((3,1))\n",
+    "    \n",
+    "    # add initial pose constraint\n",
+    "    omega[0,0] = 1\n",
+    "    xi[0] = initial_pos\n",
+    "    \n",
+    "    # update step1\n",
+    "    omega += [[1, -1, 0],\n",
+    "                        [-1, 1, 0],\n",
+    "                        [0, 0, 0]]\n",
+    "    xi += [[-move1],\n",
+    "              [move1],\n",
+    "              [0]]\n",
+    "    \n",
+    "     # update step 2\n",
+    "    omega += [[0, 0, 0],\n",
+    "                        [0, 1, -1],\n",
+    "                        [0, -1, 1]]\n",
+    "    xi += [[0],\n",
+    "              [-move2],\n",
+    "              [move2]]\n",
+    "\n",
     "    \n",
     "    # display final omega and xi\n",
     "    print('Omega: \\n', omega)\n",
@@ -79,15 +100,42 @@
     "    \n",
     "    ## TODO: calculate mu as the inverse of omega * xi\n",
     "    ## recommended that you use: np.linalg.inv(np.matrix(omega)) to calculate the inverse\n",
-    "    mu = 0\n",
+    "    omega_inv = np.linalg.inv(np.matrix(omega))\n",
+    "    #  mind the difference np.matrix and np.array\n",
+    "    #print(omega_inv)\n",
+    "    #print(np.linalg.inv(omega) * xi )\n",
+    "    mu =  omega_inv * xi\n",
     "    return mu\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Omega: \n",
+      " [[ 2. -1.  0.]\n",
+      " [-1.  2. -1.]\n",
+      " [ 0. -1.  1.]]\n",
+      "\n",
+      "\n",
+      "Xi: \n",
+      " [[-8.]\n",
+      " [ 2.]\n",
+      " [ 3.]]\n",
+      "\n",
+      "\n",
+      "Mu: \n",
+      " [[-3.]\n",
+      " [ 2.]\n",
+      " [ 5.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# call function and print out `mu`\n",
     "mu = mu_from_positions(-3, 5, 3)\n",
@@ -97,9 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
