--- a/P3_Implement_SLAM/1. Robot Moving and Sensing.ipynb
+++ b/P3_Implement_SLAM/1. Robot Moving and Sensing.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,8 +115,8 @@
     "                   \n",
     "        measurements = []\n",
     "        for i in range(len(self.landmarks)):\n",
-    "            dx = self.x - self.landmarks[i][0] + self.rand() * measurement_noise\n",
-    "            dy = self.y - self.landmarks[i][1] + self.rand()  * measurement_noise\n",
+    "            dx = self.landmarks[i][0] - self.x + self.rand() * measurement_noise\n",
+    "            dy = self.landmarks[i][1] - self.y + self.rand()  * measurement_noise\n",
     "            if (measurement_range == -1) or ((dx < measurement_range) and (dy < measurement_range)):\n",
     "                measurements.append([i, dx, dy])\n",
     "        \n",
